Update contact information in index.html

--- a/01-Static Resume/index.html
+++ b/01-Static Resume/index.html
@@ -98,11 +98,11 @@
 
                             <div class="home__address bd-grid">
                                 <span class="home__information">
-                                    <i class='bx bx-map home__icon'></i> B-105/10-A, Khokhrapar No.4, Malir Extension Colony, Karachi
+                                    <i class='bx bx-map home__icon'></i> Malir Extension Colony, Karachi, Pakistan
                                 </span>
                                 
                                 <span class="home__information">
-                                    <i class='bx bx-envelope home__icon'></i> DJZAIN33@GMAIL.COM
+                                    <i class='bx bx-envelope home__icon'></i> zain.dev00@gmail.com
                                 </span>
 
                                 <span class="home__information">
